Add Blogs and Map

--- a/index.html
+++ b/index.html
@@ -590,4 +590,114 @@
       </div>
     </div>
   </section>
+
+  <section class="section">
+    <div class="container">
+      <div class="section__header">
+        <h3 class="section__subtitle">Our stories</h3>
+        <h2 class="section__title">Latest blog</h2>
+      </div>
+      <div class="blogs">
+        <div class="blogs__item">
+          <div class="blogs__header">
+            <a href="#"
+              ><img class="blogs__photo" src="img/blogs/blog_1.png" alt=""
+            /></a>
+            <div class="blogs__date">
+              <div class="date__day">14</div>
+              <div class="date__mounth">Jan</div>
+            </div>
+          </div>
+
+          <div class="blog__content">
+            <div class="blogs__title">
+              <a href="#">sed do eiusmod tempor</a>
+            </div>
+
+            <div class="blogs__text">
+              Adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+              dolore magna aliqua.
+            </div>
+          </div>
+          <div class="blogs-stat">
+            <span class="blog-stat__item"><i class="far fa-eye"></i>542</span
+            ><span class="blog-stat__item"
+              ><i class="fas fa-comment-dots"></i>17</span
+            >
+          </div>
+        </div>
+
+        <div class="blogs__item">
+          <div class="blogs__header">
+            <a href="#"
+              ><img class="blogs__photo" src="img/blogs/blog_2.png" alt=""
+            /></a>
+            <div class="blogs__date">
+              <div class="date__day">14</div>
+              <div class="date__mounth">Jan</div>
+            </div>
+          </div>
+
+          <div class="blog__content">
+            <div class="blogs__title">
+              <a href="#">sed do eiusmod tempor</a>
+            </div>
+            <div class="blogs__text">
+              Elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+              aliqua.
+            </div>
+          </div>
+          <div class="blogs-stat">
+            <span class="blog-stat__item"><i class="far fa-eye"></i>542</span
+            ><span class="blog-stat__item"
+              ><i class="fas fa-comment-dots"></i>17</span
+            >
+          </div>
+        </div>
+
+        <div class="blogs__item">
+          <div class="blogs__header">
+            <a><img class="blogs__photo" src="img/blogs/blog_3.png" alt=""/></a>
+            <div class="blogs__date">
+              <div class="date__day">14</div>
+              <div class="date__mounth">Jan</div>
+            </div>
+          </div>
+
+          <div class="blog__content">
+            <a href="#">
+              <div class="blogs__title">
+                <a href="#">sed do eiusmod tempor</a>
+              </div>
+            </a>
+            <div class="blogs__text">
+              Elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+              aliqua.
+            </div>
+          </div>
+          <div class="blogs-stat">
+            <span class="blog-stat__item"><i class="far fa-eye"></i>542</span
+            ><span class="blog-stat__item"
+              ><i class="fas fa-comment-dots"></i>17</span
+            >
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="section section--map">
+    <div class="container">
+      <div class="map">
+        <h2 class="map__title">
+          <div>
+              <i class="fas fa-map-marker-alt"></i>
+          </div>
+          <a href="#" target="_blank">Open Map</a>
+        </h2>
+
+      </div>
+    </div>
+
+  </section>
 </html>
