--- a/index.html
+++ b/index.html
@@ -691,13 +691,154 @@
       <div class="map">
         <h2 class="map__title">
           <div>
-              <i class="fas fa-map-marker-alt"></i>
+            <i class="fas fa-map-marker-alt"></i>
           </div>
           <a href="#" target="_blank">Open Map</a>
         </h2>
-
       </div>
     </div>
-
   </section>
+
+  <footer class="footer">
+    <div class="container">
+      <div class="footer__inner">
+        <div class="footer__col footer__col--first ">
+          <div class="footer__logo">
+            MoGo
+          </div>
+          <div class="footer__text">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+            aliquip ex ea commodo consequat. Duis aute irure dolor in
+            reprehenderit in voluptate
+          </div>
+
+          <div class="footer__social">
+            <div class="footer__social-header"><b>15k</b> followers</div>
+            <div class="footer__social-content">
+              Follow Us:
+              <a href="#" class="footer-socials"
+                ><i class="fab fa-facebook-f"></i
+              ></a>
+              <a href="#" class="footer-socials"
+                ><i class="fab fa-twitter"></i
+              ></a>
+              <a href="#" class="footer-socials"
+                ><i class="fab fa-instagram"></i
+              ></a>
+              <a href="#" class="footer-socials"
+                ><i class="fab fa-pinterest-p"></i
+              ></a>
+              <a href="#" class="footer-socials"
+                ><i class="fab fa-google-plus-g"></i
+              ></a>
+              <a href="#" class="footer-socials"
+                ><i class="fab fa-youtube"></i
+              ></a>
+              <a href="#" class="footer-socials"
+                ><i class="fab fa-tumblr"></i
+              ></a>
+              <a href="#" class="footer-socials"
+                ><i class="fab fa-whatsapp"></i
+              ></a>
+            </div>
+          </div>
+
+          <form action="/" method="POST" class="subscribe">
+            <input
+              class="subscribe__input"
+              type="email"
+              placeholder="Your Email..."
+            />
+            <button class="subscribe__btn" type="sumbit">Subscribe</button>
+          </form>
+        </div>
+
+        <div class="footer__col  footer__col--second">
+          <div class="footer__title">blogs</div>
+
+          <div class="footer__blogs">
+            <div class="footer__blogs__item">
+              <img
+                class="footer__blogs__img"
+                src="img/footer_blogs/footer__blog1.png"
+                alt=""
+              />
+              <div class="blogs__content">
+                <a href="#" class="footer__blogs__title__link">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing
+                </a>
+                <div class="footer__blogs__date">Jan 9, 2016</div>
+              </div>
+            </div>
+            <div class="footer__blogs__item">
+              <img
+                class="footer__blogs__img"
+                src="img/footer_blogs/footer__blog2.png"
+                alt=""
+              />
+              <div class="blogs__content">
+                <a href="#" class="footer__blogs__title__link">
+                  Consectetur adipiscing elit, sed do eiusmod tempor
+                </a>
+                <div class="footer__blogs__date">Jan 9, 2016</div>
+              </div>
+            </div>
+            <div class="footer__blogs__item">
+              <img
+                class="footer__blogs__img"
+                src="img/footer_blogs/footer__blog3.png"
+                alt=""
+              />
+              <div class="blogs__content">
+                <a href="#" class="footer__blogs__title__link">
+                  sed do eiusmod tempor incididunt ut labore
+                </a>
+                <div class="footer__blogs__date">Jan 9, 2016</div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="footer__col  footer__col--third">
+          <div class="footer__title">instagram</div>
+
+          <div class="instagram">
+          <a class="inst__item" href="#">
+            <img src="img/footer_inst/1.png" alt="" />
+          </a>
+          <a class="inst__item" href="#"
+            ><img src="img/footer_inst/2.png" alt=""
+          /></a>
+          <a class="inst__item" href="#"
+            ><img src="img/footer_inst/3.png" alt=""
+          /></a>
+          <a class="inst__item" href="#"
+            ><img src="img/footer_inst/4.png" alt=""
+          /></a>
+          <a class="inst__item" href="#"
+            ><img src="img/footer_inst/5.png" alt=""
+          /></a>
+          <a class="inst__item" href="#"
+            ><img src="img/footer_inst/6.png" alt=""
+          /></a>
+          <a class="inst__item" href="#"
+            ><img src="img/footer_inst/7.png" alt=""
+          /></a>
+          <a class="inst__item" href="#"
+            ><img src="img/footer_inst/8.png" alt=""
+          /></a>
+          <a class="inst__item" href="#"
+            ><img src="img/footer_inst/9.png" alt=""
+          /></a>
+        </div>
+        </div>
+      </div>
+
+      <div class="copyright">
+          © 2016 MoGo free PSD template by Laaqiq
+      </div>
+    </div>
+  </footer>
 </html>
