--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i&display=swap"
       rel="stylesheet"
     />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Mogo</title>
     <script src="https://kit.fontawesome.com/63df5c547c.js"></script>
   </head>
@@ -47,19 +48,19 @@
           <div class="slider__inner">
             <div class="slider__item active">
               <span class="slider__num">01</span>
-              Intro
+              <span class="slider__text"> Intro</span>
             </div>
             <div class="slider__item">
               <span class="slider__num">02</span>
-              Work
+              <span class="slider__text">Work</span>
             </div>
             <div class="slider__item">
               <span class="slider__num">03</span>
-              About
+              <span class="slider__text">About</span>
             </div>
             <div class="slider__item">
               <span class="slider__num">04</span>
-              Contacts
+              <span class="slider__text">Contacts</span>
             </div>
           </div>
         </div>
@@ -78,25 +79,34 @@
             </p>
           </div>
         </div>
-      </div>
-      <div class="about">
-        <div class="about__item">
-          <div class="about__img">
-            <img class="img-about" src="img/about/about-1.png" alt="" />
+
+        <div class="card">
+          <div class="card__item">
+            <div class="card__inner">
+              <div class="card__img">
+                <img src="img/about/about-1.png" alt="" />
+              </div>
+              <div class="card__text">super team</div>
+            </div>
           </div>
-          <div class="about__text">super team</div>
-        </div>
-        <div class="about__item">
-          <div class="about__img">
-            <img src="img/about/about-2.png" alt="" />
+
+          <div class="card__item">
+            <div class="card__inner">
+              <div class="card__img">
+                <img src="img/about/about-2.png" alt="" />
+              </div>
+              <div class="card__text">super team</div>
+            </div>
           </div>
-          <div class="about__text">super team</div>
-        </div>
-        <div class="about__item">
-          <div class="about__img">
-            <img src="img/about/about-3.png" alt="" />
+
+          <div class="card__item">
+            <div class="card__inner">
+              <div class="card__img">
+                <img src="img/about/about-3.png" alt="" />
+              </div>
+              <div class="card__text">super team</div>
+            </div>
           </div>
-          <div class="about__text">super team</div>
         </div>
       </div>
     </section>
@@ -135,7 +145,7 @@
           <h2 class="section__title">Amazing Services</h2>
         </div>
         <div class="services">
-          <div class="services__item">
+          <div class="services__item services__item--border">
             <img class="services__icon" src="img/icon/BOOK_2.png" alt="" />
             <div class="services__tittle">
               seo
@@ -144,7 +154,7 @@
               Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.
             </div>
           </div>
-          <div class="services__item">
+          <div class="services__item services__item--border">
             <img class="services__icon" src="img/icon/HOME.png" alt="" />
             <div class="services__tittle">
               Css/Html
@@ -153,7 +163,7 @@
               Lorem dolor sit amet, consectetur adipiscing elit, sed do tempor.
             </div>
           </div>
-          <div class="services__item">
+          <div class="services__item services__item--border">
             <img class="services__icon" src="img/icon/BOOK_2.png" alt="" />
             <div class="services__tittle">
               Creativity
@@ -163,9 +173,7 @@
               tempor.
             </div>
           </div>
-        </div>
-        <hr />
-        <div class="services">
+
           <div class="services__item">
             <img class="services__icon" src="img/icon/ALARM.png" alt="" />
             <div class="services__tittle">
@@ -236,54 +244,56 @@
             </p>
           </div>
         </div>
-      </div>
-      <div class="wedo">
-        <div class="wedo__item">
-          <img src="img/man.png" alt="" />
-        </div>
-        <div class="wedo__item">
-          <div class="accordion">
-            <div class="accordion__item active">
-              <div class="accordion__header">
-                <img
-                  src="img/accordeon/photo.png"
-                  alt=""
-                  class="accordion__icon"
-                />
-                <div class="acardion__title">Photography</div>
-              </div>
-              <div class="accordion__content">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-                enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
-                in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-                nulla pariatur. Excepteur sint occaecat cupidatat non proident,
-                sunt in culpa qui officia deserunt mollit anim id est laborum.
-              </div>
-            </div>
-            <div class="accordion__item">
-              <div class="accordion__header">
-                <img
-                  src="img/accordeon/creativity.png"
-                  alt=""
-                  class="accordion__icon"
-                />
-                <div class="acardion__title">creativity</div>
-              </div>
-              <div class="accordion__content"></div>
-            </div>
-            <div class="accordion__item">
-              <div class="accordion__header">
-                <img
-                  src="img/accordeon/web.png"
-                  alt=""
-                  class="accordion__icon"
-                />
-                <div class="acardion__title">web design</div>
-              </div>
 
-              <div class="accordion__content"></div>
+        <div class="wedo">
+          <div class="wedo__item">
+            <img class="wedo__img" src="img/man.png" alt="" />
+          </div>
+          <div class="wedo__item">
+            <div class="accordion">
+              <div class="accordion__item active">
+                <div class="accordion__header">
+                  <img
+                    src="img/accordeon/photo.png"
+                    alt=""
+                    class="accordion__icon"
+                  />
+                  <div class="acardion__title">Photography</div>
+                </div>
+                <div class="accordion__content">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                  Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                  laboris nisi ut aliquip ex ea commodo consequat. Duis aute
+                  irure dolor in reprehenderit in voluptate velit esse cillum
+                  dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+                  cupidatat non proident, sunt in culpa qui officia deserunt
+                  mollit anim id est laborum.
+                </div>
+              </div>
+              <div class="accordion__item">
+                <div class="accordion__header">
+                  <img
+                    src="img/accordeon/creativity.png"
+                    alt=""
+                    class="accordion__icon"
+                  />
+                  <div class="acardion__title">creativity</div>
+                </div>
+                <div class="accordion__content"></div>
+              </div>
+              <div class="accordion__item">
+                <div class="accordion__header">
+                  <img
+                    src="img/accordeon/web.png"
+                    alt=""
+                    class="accordion__icon"
+                  />
+                  <div class="acardion__title">web design</div>
+                </div>
+
+                <div class="accordion__content"></div>
+              </div>
             </div>
           </div>
         </div>
@@ -324,109 +334,101 @@
         </div>
       </div>
 
-      <div class="about">
-        <div class="about__item">
-          <div class="about__inner">
-            <div class="about__img">
-              <img class="img-about" src="img/ourTeam/man_1.png" alt="" />
+      <div class="card">
+        <div class="card__item">
+          <div class="card__inner">
+            <div class="card__img">
+              <img src="img/ourTeam/man_1.png" alt="" />
             </div>
-            <div class="about__text">
+            <div class="card__text">
               <div class="social">
-                <a class="social__item" href="#" target="_blanc">
+                <a class="social__item" href="#" target="_blank">
                   <i class="fab fa-facebook-f"></i>
                 </a>
-                <a class="social__item" href="#" target="_blanc">
+                <a class="social__item" href="#" target="_blank">
                   <i class="fab fa-twitter"></i>
                 </a>
-                <a class="social__item" href="#" target="_blanc">
+                <a class="social__item" href="#" target="_blank">
                   <i class="fab fa-pinterest-p"></i>
                 </a>
-                <a class="social__item" href="#" target="_blanc">
+                <a class="social__item" href="#" target="_blank">
                   <i class="fab fa-instagram"></i>
                 </a>
               </div>
             </div>
           </div>
-
-          <div class="prative">
-            <div class="name">
-              Matthew Dix
-            </div>
-            <div class="specilization">
-              Graphic Design
-            </div>
+          <div class="card__info">
+            <div class="card__name">Matthew Dix</div>
+            <div class="card__prof">Graphic Design</div>
           </div>
         </div>
-        <div class="about__item">
-          <div class="about__inner">
-            <div class="about__img">
+        <!-- /.card__item -->
+
+        <div class="card__item">
+          <div class="card__inner">
+            <div class="card__img">
               <img src="img/ourTeam/man_2.png" alt="" />
             </div>
-            <div class="about__text">
+            <div class="card__text">
               <div class="social">
-                <a class="social__item" href="#" target="_blanc">
+                <a class="social__item" href="#" target="_blank">
                   <i class="fab fa-facebook-f"></i>
                 </a>
-                <a class="social__item" href="#" target="_blanc">
+                <a class="social__item" href="#" target="_blank">
                   <i class="fab fa-twitter"></i>
                 </a>
-                <a class="social__item" href="#" target="_blanc">
+                <a class="social__item" href="#" target="_blank">
                   <i class="fab fa-pinterest-p"></i>
                 </a>
-                <a class="social__item" href="#" target="_blanc">
+                <a class="social__item" href="#" target="_blank">
                   <i class="fab fa-instagram"></i>
                 </a>
               </div>
             </div>
           </div>
-          <div class="prative">
-            <div class="name">
-              Christopher Campbell
-            </div>
-            <div class="specilization">
-              Branding/UX design
-            </div>
+          <div class="card__info">
+            <div class="card__name">Christopher Campbell</div>
+            <div class="card__prof">Branding/UX design</div>
           </div>
         </div>
+        <!-- /.card__item -->
 
-        <div class="about__item">
-          <div class="about__inner">
-            <div class="about__img">
+        <div class="card__item">
+          <div class="card__inner">
+            <div class="card__img">
               <img src="img/ourTeam/man_3.png" alt="" />
             </div>
-            <div class="about__text">
+            <div class="card__text">
               <div class="social">
-                <a class="social__item" href="#" target="_blanc">
+                <a class="social__item" href="#" target="_blank">
                   <i class="fab fa-facebook-f"></i>
                 </a>
-                <a class="social__item" href="#" target="_blanc">
+                <a class="social__item" href="#" target="_blank">
                   <i class="fab fa-twitter"></i>
                 </a>
-                <a class="social__item" href="#" target="_blanc">
+                <a class="social__item" href="#" target="_blank">
                   <i class="fab fa-pinterest-p"></i>
                 </a>
-                <a class="social__item" href="#" target="_blanc">
+                <a class="social__item" href="#" target="_blank">
                   <i class="fab fa-instagram"></i>
                 </a>
               </div>
             </div>
           </div>
-          <div class="prative">
-            <div class="name">
-              Michael Fertig
-            </div>
-            <div class="specilization">
-              Developer
-            </div>
+          <div class="card__info">
+            <div class="card__name">Michael Fertig</div>
+            <div class="card__prof">Developer</div>
           </div>
         </div>
+        <!-- /.card__item -->
       </div>
+      <!-- /.card -->
     </div>
   </section>
 
   <div class="section section--gray">
     <div class="container">
-      <img src="img/logos.png" alt="" />
+      <img class="img__logos" src="img/logos.png" alt="" />
     </div>
   </div>
 
@@ -805,39 +807,39 @@
           <div class="footer__title">instagram</div>
 
           <div class="instagram">
-          <a class="inst__item" href="#">
-            <img src="img/footer_inst/1.png" alt="" />
-          </a>
-          <a class="inst__item" href="#"
-            ><img src="img/footer_inst/2.png" alt=""
-          /></a>
-          <a class="inst__item" href="#"
-            ><img src="img/footer_inst/3.png" alt=""
-          /></a>
-          <a class="inst__item" href="#"
-            ><img src="img/footer_inst/4.png" alt=""
-          /></a>
-          <a class="inst__item" href="#"
-            ><img src="img/footer_inst/5.png" alt=""
-          /></a>
-          <a class="inst__item" href="#"
-            ><img src="img/footer_inst/6.png" alt=""
-          /></a>
-          <a class="inst__item" href="#"
-            ><img src="img/footer_inst/7.png" alt=""
-          /></a>
-          <a class="inst__item" href="#"
-            ><img src="img/footer_inst/8.png" alt=""
-          /></a>
-          <a class="inst__item" href="#"
-            ><img src="img/footer_inst/9.png" alt=""
-          /></a>
-        </div>
+            <a class="inst__item" href="#">
+              <img src="img/footer_inst/1.png" alt="" />
+            </a>
+            <a class="inst__item" href="#"
+              ><img src="img/footer_inst/2.png" alt=""
+            /></a>
+            <a class="inst__item" href="#"
+              ><img src="img/footer_inst/3.png" alt=""
+            /></a>
+            <a class="inst__item" href="#"
+              ><img src="img/footer_inst/4.png" alt=""
+            /></a>
+            <a class="inst__item" href="#"
+              ><img src="img/footer_inst/5.png" alt=""
+            /></a>
+            <a class="inst__item" href="#"
+              ><img src="img/footer_inst/6.png" alt=""
+            /></a>
+            <a class="inst__item" href="#"
+              ><img src="img/footer_inst/7.png" alt=""
+            /></a>
+            <a class="inst__item" href="#"
+              ><img src="img/footer_inst/8.png" alt=""
+            /></a>
+            <a class="inst__item" href="#"
+              ><img src="img/footer_inst/9.png" alt=""
+            /></a>
+          </div>
         </div>
       </div>
 
       <div class="copyright">
-          © 2016 MoGo free PSD template by Laaqiq
+        © 2016 MoGo free PSD template by Laaqiq
       </div>
     </div>
   </footer>
