--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
       </div>
     </header>
 
+
+    <div class="page">
     <div class="intro">
       <div class="container">
         <div class="intro__inner">
@@ -842,5 +844,6 @@
         © 2016 MoGo free PSD template by Laaqiq
       </div>
     </div>
+  </div>
   </footer>
 </html>
