--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </head>
 
   <body>
-    <header class="header">
+    <header class="header active">
       <div class="container">
         <div class="header__inner">
           <div class="header__logo">MoGo</div>
@@ -28,7 +28,17 @@
             <a class="nav__link" href="#">Blog</a>
             <a class="nav__link" href="#">Work</a>
             <a class="nav__link" href="#">Contact</a>
+            <a class="nav__link" href="#">
+              <i class="fas fa-shopping-cart"></i>
+          </a>
+          <a class="nav__link" href="#">
+              <i class="fas fa-search"></i>
+          </a>
           </nav>
+
+          <button class="nav-toggle" type="button">
+            <span class="nav-toggle__item">Menu</span>
+          </button>
         </div>
       </div>
     </header>
