--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
             <div class="wedo__item">
               <div class="accordion">
                 <div class="accordion__item" data-collapse="#wedo_1">
-                  <div class="accordion__header" >
+                  <div class="accordion__header">
                     <img
                       src="img/accordeon/photo.png"
                       alt=""
@@ -298,11 +298,13 @@
                     />
                     <div class="acardion__title">creativity</div>
                   </div>
-                  <div class="accordion__content" id="wedo_2" >Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                      do eiusmod tempor incididunt ut labore et dolore magna
-                      aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                      ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                      Duis aute irure dolor in re</div>
+                  <div class="accordion__content" id="wedo_2">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                    do eiusmod tempor incididunt ut labore et dolore magna
+                    aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                    ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                    Duis aute irure dolor in re
+                  </div>
                 </div>
                 <div class="accordion__item" data-collapse="#wedo_3">
                   <div class="accordion__header">
@@ -314,12 +316,14 @@
                     <div class="acardion__title">web design</div>
                   </div>
 
-                  <div class="accordion__content" id="wedo_3" >Ut enim ad minim veniam, quis nostrud exercitation
-                      ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                      Duis aute irure dolor in reprehenderit in voluptate velit
-                      esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-                      occaecat cupidatat non proident, sunt in culpa qui officia
-                      deserunt mollit anim id est laborum.</div>
+                  <div class="accordion__content" id="wedo_3">
+                    Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                    laboris nisi ut aliquip ex ea commodo consequat. Duis aute
+                    irure dolor in reprehenderit in voluptate velit esse cillum
+                    dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+                    cupidatat non proident, sunt in culpa qui officia deserunt
+                    mollit anim id est laborum.
+                  </div>
                 </div>
               </div>
             </div>
