--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
       rel="stylesheet"
     />
 
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"
+    />
+
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Mogo</title>
     <script src="https://kit.fontawesome.com/63df5c547c.js"></script>
@@ -334,21 +340,40 @@
       <div class="section section--gray">
         <div class="container">
           <div class="reviews">
-            <a class="reviews__btn reviews__btn--prev" href="#">Prev</a>
-            <a class="reviews__btn reviews__btn--next" href="#">Next</a>
-            <div class="reviews__item">
-              <img
-                class="reviews__photo"
-                src="img/reviews/revies_1.png"
-                alt=""
-              />
-              <div class="reviews__text">
-                “Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-                enim ad minim veniam, quis nostrud exercitation.”
+            <div data-slider>
+              <div>
+                <div class="reviews__item">
+                  <img
+                    class="reviews__photo"
+                    src="img/reviews/revies_1.png"
+                    alt=""
+                  />
+                  <div class="reviews__text">
+                    “Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                    sed do eiusmod tempor incididunt ut labore et dolore magna
+                    aliqua. Ut enim ad minim veniam, quis nostrud exercitation.”
+                  </div>
+                  <div class="reviews__author">
+                    Jon Doe
+                  </div>
+                </div>
               </div>
-              <div class="reviews__author">
-                Jon Doe
+              <div>
+                <div class="reviews__item">
+                  <img
+                    class="reviews__photo"
+                    src="img/reviews/revies_1.png"
+                    alt=""
+                  />
+                  <div class="reviews__text">
+                    “Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                    sed do eiusmod tempor incididunt ut labore et dolore magna
+                    aliqua. Ut enim ad minim veniam, quis nostrud exercitation.”
+                  </div>
+                  <div class="reviews__author">
+                    Jon Doe
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -552,17 +577,32 @@
       <div class="section ">
         <div class="container">
           <div class="reviews">
-            <a class="reviews__btn reviews__btn--prev" href="#">Prev</a>
-            <a class="reviews__btn reviews__btn--next" href="#">Next</a>
-            <div class="reviews__item">
-              <img class="reviews__photo" src="img/rewiew_2.png" alt="" />
-              <div class="reviews__text">
-                “Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-                enim ad minim veniam, quis nostrud exercitation.”
+            <div data-slider>
+              <div>
+                <div class="reviews__item">
+                  <img class="reviews__photo" src="img/rewiew_2.png" alt="" />
+                  <div class="reviews__text">
+                    “Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                    sed do eiusmod tempor incididunt ut labore et dolore magna
+                    aliqua. Ut enim ad minim veniam, quis nostrud exercitation.”
+                  </div>
+                  <div class="reviews__author">
+                    Jon Doe
+                  </div>
+                </div>
               </div>
-              <div class="reviews__author">
-                Jon Doe
+              <div>
+                <div class="reviews__item">
+                  <img class="reviews__photo" src="img/rewiew_2.png" alt="" />
+                  <div class="reviews__text">
+                    “Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                    sed do eiusmod tempor incididunt ut labore et dolore magna
+                    aliqua. Ut enim ad minim veniam, quis nostrud exercitation.”
+                  </div>
+                  <div class="reviews__author">
+                    Jon Doe
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -901,5 +941,10 @@
     </footer>
   </body>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script
+    type="text/javascript"
+    src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"
+  ></script>
+
   <script src="app.js"></script>
 </html>
